<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">THASSculptures</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="map">Map</string>
    <string name="gallery">Gallery</string>
    <string name="tours">Tours</string>
    <string name="website">Website</string>
    <string name="donate">Donate</string>
    <string name="title_activity_tours_map">ToursMapActivity</string>
    <string name="title_activity_sculpture">SculptureActivity</string>
    <string name="sculpture_name">Sculpture Name</string>
    <string name="sculpture_author">Author Name</string>
    <string name="sculpture_address">5500 Wabash Ave, Terre Haute, IN</string>
    <string name="sculpture_description">    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</string>
    <string name="audio_menu_text">Play Audio</string>
    <string name="share_menu_text">Share</string>
    <string name="artist_menu_text">Artist Profile</string>
    <string name="map_menu_text">Map</string>
    <string name="notebook_menu_text">Notebook</string>
    <string name="about_menu_text">About</string>
    <string name="gallery_text">Show us your experience!</string>
    <string name="add_gallery_text">Add a Picture</string>
    <string name="title_activity_artist_page">ArtistPageActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="enter_comment">Enter Comment Here!</string>
    <string name="enter_name">Enter Name Here!</string>
    <string name="thumbnail_sculpture_description">Sculpture Image</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="comment">Comment</string>

</resources>