<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="edu.rosehulman.thassculptures.SculptureActivity" >

        <ImageView
            android:id="@+id/imageView_sculpture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:src="@android:drawable/picture_frame" />

        <TextView
            android:id="@+id/textView_sculptureName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sculpture_name"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_sculptureArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sculpture_author"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_sculptureAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sculpture_address"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_sculptureDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sculpture_description"
            android:textSize="18sp" />

        <View
            android:id="@+id/dividor1"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey" />

        <LinearLayout
            android:id="@+id/layout_gallery"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textview_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/gallery_text"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_gallery_text" />
        </LinearLayout>

        <View
            android:id="@+id/dividor2"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textview_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/edittext_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textview_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment" />

            <EditText
                android:id="@+id/edittext_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_comment" />
        </LinearLayout>

        <Button
            android:id="@+id/button_send_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <ListView
                android:id="@+id/listview_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:scrollbars="vertical" >
            </ListView>
        </LinearLayout>
    </LinearLayout>

</ScrollView>