<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.rosehulman.thassculptures.MainActivity" >

    <ImageView
        android:id="@+id/art_spaces_imageview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="3"
        android:src="@mipmap/art_spaces_logo" />

    <LinearLayout
        android:id="@+id/layout_map_gallery"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/map" />

        <Button
            android:id="@+id/button_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/gallery" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_tours_website"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_tours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/tours" />

        <Button
            android:id="@+id/button_website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/website" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_donate"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_donate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/donate" />
    </LinearLayout>

</LinearLayout>